block-scheduled-tasks/deployments/redis/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:6.2
          ports:
            - containerPort: 6379
          command: ["redis-server"]
          args:
            - "--save"  # Disables RDB saving
            - ""
            - "--appendonly"
            - "no"  # Disables AOF persistence
