block-scheduled-tasks/deployments/redis/redis-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: redis
  labels:
    app: redis
spec:
  to:
    kind: Service
    name: redis
  port:
    targetPort: 6379
